--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 
-<!doctype html>
-
-
 <html>
 <head>
   <script src="https://use.fontawesome.com/6b392f4a65.js"></script>
@@ -15,12 +12,11 @@
 <body>
   <div class="container">
 <form>
-
-<input id="searchField" class="input" type="text" placeholder="Search Google Books" name="input">
+<input id="searchField" class="input" type="search" placeholder="Search Google Books" name="input" spellcheck="true">
 <button id="submitButton" class="submitButton" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
-</form>
-    </div>
-
+      </form>
+      </div>
+    
   
   <ul id="response">
           </ul>
